@@ -48,7 +48,7 @@ end_include
 begin_typedef
 typedef|typedef
 enum|enum
-DECL|enum|__anon2c59ead00103
+DECL|enum|__anon27e9c65f0103
 block|{
 DECL|enumerator|DOWNLOAD
 name|DOWNLOAD
@@ -500,7 +500,7 @@ end_function
 begin_typedef
 typedef|typedef
 struct|struct
-DECL|struct|__anon2c59ead00208
+DECL|struct|__anon27e9c65f0208
 block|{
 DECL|member|mode
 name|Mode
@@ -886,10 +886,6 @@ modifier|*
 name|error
 parameter_list|)
 block|{
-name|GVfs
-modifier|*
-name|vfs
-decl_stmt|;
 name|GFile
 modifier|*
 name|src_file
@@ -908,53 +904,6 @@ decl_stmt|;
 name|gboolean
 name|success
 decl_stmt|;
-name|vfs
-operator|=
-name|g_vfs_get_default
-argument_list|()
-expr_stmt|;
-if|if
-condition|(
-operator|!
-name|g_vfs_is_active
-argument_list|(
-name|vfs
-argument_list|)
-condition|)
-block|{
-name|g_set_error
-argument_list|(
-name|error
-argument_list|,
-name|G_FILE_ERROR
-argument_list|,
-name|G_FILE_ERROR_FAILED
-argument_list|,
-literal|"Initialization of GVfs failed"
-argument_list|)
-expr_stmt|;
-return|return
-name|FALSE
-return|;
-block|}
-name|src_file
-operator|=
-name|g_vfs_get_file_for_uri
-argument_list|(
-name|vfs
-argument_list|,
-name|src_uri
-argument_list|)
-expr_stmt|;
-name|dest_file
-operator|=
-name|g_vfs_get_file_for_uri
-argument_list|(
-name|vfs
-argument_list|,
-name|dest_uri
-argument_list|)
-expr_stmt|;
 name|gimp_progress_init
 argument_list|(
 name|_
@@ -968,6 +917,20 @@ operator|.
 name|mode
 operator|=
 name|mode
+expr_stmt|;
+name|src_file
+operator|=
+name|g_file_new_for_uri
+argument_list|(
+name|src_uri
+argument_list|)
+expr_stmt|;
+name|dest_file
+operator|=
+name|g_file_new_for_uri
+argument_list|(
+name|dest_uri
+argument_list|)
 expr_stmt|;
 name|success
 operator|=
